--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 5%;
+            margin-top: 60px;
             max-width: 1400px;
             margin: 0 auto;
         }
@@ -122,6 +123,8 @@
             background: linear-gradient(rgba(26, 58, 108, 0.85), rgba(230, 126, 34, 0.8)), url('https://images.unsplash.com/photo-1541888946425-d81bb74d66a8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');
             background-size: cover;
             background-position: center;
+
+  margin-top: 60px;
             height: 100vh;
             display: flex;
             align-items: center;
